--- a/book.tex
+++ b/book.tex
@@ -10084,6 +10084,7 @@ Sarah Hegge,
 Steven Cherry,
 Sarah Kathleen Barbarow,
 Andrea Parker,
+Radaphat Chongthammakun,
 Megan Hixon,
 
 % CONTRIB
@@ -10208,16 +10209,11 @@ St\'{e}phane Morin,
 and
 Paul Stoop.
 
-% ENDCONTRIB
-
 \normalsize
 
 \printindex
 
 \clearemptydoublepage
-%\blankpage
-%\blankpage
-%\blankpage
 
 
 \end{document}
