First cut at networked programs.
git-svn-id: https://source.sakaiproject.org/contrib/csev/trunk/pyinf/tex@66536 fdecad78-55fc-0310-b1b2-d7d25cf747c9

--- a/book.tex
+++ b/book.tex
@@ -9435,7 +9435,7 @@ varies between languages.  Compare your results with the tables at
 %\end{ex}
 
 % For now, we will produce without the additional chapters
-% \input{more.tex}
+\input{more.tex}
 
 \appendix
 
